--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "some description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp",
+    "build": "gulp sass"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,12 @@
   },
   "homepage": "https://github.com/Jakub-Laczniak/Best-Shop#readme",
   "dependencies": {
-    "cloudinary": "^1.26.0"
+    "cloudinary": "^1.26.0",
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "sass": "^1.26.3"
   }
 }
